# socket.io

./: CMakeLists.txt  README.md
cmake/: SocketIOConfig.cmake.in
include/SocketIO/Internal/: sio_client_impl.h
src/: sio_client.cpp  sio_socket.cpp
src/internal/: sio_client_impl.cpp  sio_packet.cpp
